// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders multiple lines of a crash log 1`] = `
<section
  className="AlertPane"
>
  <ul>
    <li
      className="AlertPane-item"
    >
      <header>
        <p>
          foo
        </p>
        <p>
          Pod crashed
        </p>
        <p>
          <time
            dateTime="1949-11-18T09:39:00.000Z"
            title="1,555,970,585,039"
          >
            67yr
          </time>
        </p>
      </header>
      <section>
        <code>
          <span
            className={null}
            style={null}
          >
            Eeeeek the container crashed
          </span>
        </code>
        <code>
          <span
            className={null}
            style={null}
          >
            no but really it crashed
          </span>
        </code>
      </section>
    </li>
  </ul>
</section>
`;

exports[`renders no errors 1`] = `
<section
  className="AlertPane"
>
  <section
    className="Pane-empty-message"
  >
    <svg>
      logo-wordmark-gray.svg
    </svg>
    <h2>
      No Alerts Found
    </h2>
  </section>
</section>
`;

exports[`renders one container start error 1`] = `
<section
  className="AlertPane"
>
  <ul>
    <li
      className="AlertPane-item"
    >
      <header>
        <p>
          foo
        </p>
        <p>
          <time
            dateTime="1949-11-18T09:39:00.000Z"
            title="1,555,970,585,039"
          >
            67yr
          </time>
        </p>
      </header>
      <section>
        <code>
          <span
            className={null}
            style={null}
          >
            Eeeeek there is a problem
          </span>
        </code>
      </section>
    </li>
  </ul>
</section>
`;

exports[`renders one container start error 2`] = `
<section
  className="AlertPane"
>
  <ul>
    <li
      className="AlertPane-item"
    >
      <header>
        <p>
          foo
        </p>
        <p>
          <time
            dateTime="1949-11-18T09:39:00.000Z"
            title="1,555,970,585,039"
          >
            67yr
          </time>
        </p>
      </header>
      <section>
        <code>
          <span
            className={null}
            style={null}
          >
            Eeeeek there is a problem
          </span>
        </code>
      </section>
    </li>
  </ul>
</section>
`;

exports[`renders one container unrecognized error 1`] = `
<section
  className="AlertPane"
>
  <ul>
    <li
      className="AlertPane-item"
    >
      <header>
        <p>
          vigoda
        </p>
        <p>
          <time
            dateTime="2016-12-21T23:36:07.071Z"
            title="2016-12-21 23:36"
          >
            &lt;5s
          </time>
        </p>
      </header>
      <section>
        <code>
          <span
            className={null}
            style={null}
          >
            Detailed message on GarbleError
          </span>
        </code>
      </section>
    </li>
  </ul>
</section>
`;

exports[`renders the get alert link button when the feature is enabled 1`] = `
<section
  className="AlertPane"
>
  <ul>
    <li
      className="AlertPane-item"
    >
      <header>
        <p>
          foo
        </p>
        <p>
          <time
            dateTime="1949-11-18T09:39:00.000Z"
            title="1,555,970,585,039"
          >
            67yr
          </time>
        </p>
      </header>
      <section>
        <code>
          <span
            className={null}
            style={null}
          >
            laa dee daa I'm an error
          </span>
        </code>
        <code>
          <span
            className={null}
            style={null}
          >
            for real I am
          </span>
        </code>
      </section>
      <footer>
        <button
          onClick={[Function]}
        >
          Get Alert Link
        </button>
      </footer>
    </li>
  </ul>
</section>
`;

exports[`renders warnings 1`] = `
<section
  className="AlertPane"
>
  <ul>
    <li
      className="AlertPane-item"
    >
      <header>
        <p>
          foo
        </p>
        <p>
          Pod crashed
        </p>
        <p>
          <time
            dateTime="1949-11-18T09:39:00.000Z"
            title="1,555,970,585,039"
          >
            67yr
          </time>
        </p>
      </header>
      <section>
        <code>
          <span
            className={null}
            style={null}
          >
            Eeeeek the container crashed
          </span>
        </code>
      </section>
    </li>
    <li
      className="AlertPane-item"
    >
      <header>
        <p>
          foo
        </p>
        <p>
          foo
        </p>
        <p>
          <time
            dateTime="1949-11-18T09:39:00.000Z"
            title="1,555,970,585,039"
          >
            67yr
          </time>
        </p>
      </header>
      <section>
        <code>
          <span
            className={null}
            style={null}
          >
            Hi I'm a warning
          </span>
        </code>
      </section>
    </li>
  </ul>
</section>
`;

exports[`shows that a container has restarted 1`] = `
<section
  className="AlertPane"
>
  <ul>
    <li
      className="AlertPane-item"
    >
      <header>
        <p>
          foo
        </p>
        <p>
          Restarts: 1
        </p>
        <p>
          <time
            dateTime="1949-11-18T09:39:00.000Z"
            title="1,555,970,585,039"
          >
            67yr
          </time>
        </p>
      </header>
      <section>
        <code>
          <span
            className={null}
            style={null}
          >
            Eeeeek the container crashed
          </span>
        </code>
      </section>
    </li>
  </ul>
</section>
`;

exports[`shows that a crash rebuild has occurred 1`] = `
<section
  className="AlertPane"
>
  <ul>
    <li
      className="AlertPane-item"
    >
      <header>
        <p>
          foo
        </p>
        <p>
          Pod crashed
        </p>
        <p>
          <time
            dateTime="1949-11-18T09:39:00.000Z"
            title="1,555,970,585,039"
          >
            67yr
          </time>
        </p>
      </header>
      <section>
        <code>
          <span
            className={null}
            style={null}
          >
            Eeeeek the container crashed
          </span>
        </code>
      </section>
    </li>
  </ul>
</section>
`;
